# cochl-sense-cloud-live-demo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: __init__.py  constraints.txt  pyproject.toml
backend/app/: audio.py  cochl_live_client.py  cochl_provider.py  collection.py  config.py  curation.py  gcs_upload.py  http_safety.py  main.py  models.py  normalization.py  segment_files.py
backend/tests/: test_api.py  test_audio.py  test_cochl_live_client.py  test_cochl_provider.py  test_collection.py  test_config.py  test_curation.py  test_gcs_upload.py  test_latency_probe.py  test_normalization.py  test_segment_files.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.test.tsx  App.tsx  CollectedSessionsPanel.test.tsx  CollectedSessionsPanel.tsx  LiveSpectrogramPanel.test.ts  LiveSpectrogramPanel.tsx  api.test.ts  api.ts  audioContext.ts  liveAudio.test.ts  liveAudio.ts  liveAudioCapture.test.ts  liveChunkRecords.test.ts  liveChunkRecords.ts  liveTimeline.test.ts  liveTimeline.ts  recorder.test.ts  recorder.ts  time.test.ts  time.ts  types.ts  waveform.test.ts  waveform.ts
frontend/src/test/: setup.ts
macos/: CochlSenseCloudLiveDemoApp.m  Info.plist
scripts/: build-macos-app.sh  curation_policy_probe.py  live_chunk_latency_probe.py  run-macos-server.sh  run_macos_server.py  verify-macos-app.sh
