[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cochl-sense-cloud-live-demo-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  # The provider targets IntegratedApi plus the still-supported SED Client from SDK 2.x.
  # Do not accept a future major without an explicit compatibility review.
  "cochl>=2.0,<3.0",
  "fastapi>=0.115.0",
  "google-cloud-storage>=2.19.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "soundfile>=0.13.1",
  "starlette>=1.3.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "httpx2>=2.5.0",
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
